--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,9 @@
-<section id="slider">
+<div class="col-sm-12">
+    <div class="search_box pull-right">
+        <input type="text" [(ngModel)]="search"  placeholder="Search"/>
+    </div>
+</div>
+<section  *ngIf="catergoryId == 0" id="slider">
     <!--slider-->
     <div class="container">
         <div class="row">
@@ -111,7 +116,7 @@
                 <pagination-controls (pageChange)="p=$event"></pagination-controls>
                 <!--features_items-->
 
-                <div class="recommended_items">
+                <div class="recommended_items"  *ngIf="catergoryId == 0">
                     <!--recommended_items-->
                     <h2 class="title text-center">recommended items</h2>
                     <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
