--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,37 +1,33 @@
 <div class="features_items">
     <h2 class="title text-center"></h2>
     <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
-
-            <div class="product-image-wrapper">
-                <div class="single-products">
-                    <div class="productinfo text-center">
-                        <div class="clearfix">
-                            <ul class="slides">
-                                <ng-container *ngFor="let media of productMedias">
-                                    <li [class.slideInImage]="selectedImage == media.Id">
-                                        <img src="{{media.MediaSource}}" alt="{{product.Name}}" />
-                                    </li>
-                                </ng-container>
-                            </ul>
-                            <ul class="thumbnails">
-                                <ng-container *ngFor="let media of productMedias">
-                                    <li>
-                                        <a (click)="selectImage(media.Id)">
-                                            <img src="{{media.MediaSource}}" alt="{{product.Name}}" />
-                                        </a>
-                                    </li>
-                                </ng-container>
-                            </ul>
-                        </div>
-                     
-                        <h2>{{product.Name}}</h2>
-                        
-                        <div class="list-details">
-                         <h3>
-                                <span class="fa fa-money"> Price : </span>
-                                $ {{product.Price}}/{{product.Per}}</h3>
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            <div class="row">
+                <div class="col-md-7">
+                    <ul class="slides">
+                        <ng-container *ngFor="let media of productMedias">
+                            <li [class.slideInImage]="selectedImage == media.Id">
+                                <img src="{{media.MediaSource}}" alt="{{product.Name}}" />
+                            </li>
+                        </ng-container>
+                    </ul>
+                    <ul class="thumbnails row">
+                        <ng-container *ngFor="let media of productMedias">
+                            <li class="col-md-3 col-lg-3 col-sm-3">
+                                <a (click)="selectImage(media.Id)">
+                                    <img src="{{media.MediaSource}}" alt="{{product.Name}}" />
+                                </a>
+                            </li>
+                        </ng-container>
+                    </ul>
+                </div>
+                <div class="col-md-5">
+                    <h2>{{product.Name}}</h2>
+                    <div class="list-details">
+                        <h3>
+                            <span class="fa fa-money"> Price : </span>
+                            $ {{product.Price}} per {{product.Per}}</h3>
                         <h4>
                             <span class="fa fa-user"> Seller : </span> {{userDetails.FirstName}} {{userDetails.LastName}}</h4>
                         <h4>
@@ -44,35 +40,34 @@
                             <span class="fa fa-location-arrow"> City : </span> {{userDetails.City}}</h4>
                         <h4>
                             <span class="fa fa-address-card"> Address : </span> {{userDetails.Address}}</h4>
-                            </div>
-                        <p class="description">
-                            <span class="fa fa-sticky-note"> Description : </span>
-                            {{product.Description}}</p>
+                        <h4>
+                            <span class="fa fa-sticky-note"> Description : {{product.Description}}</span>
+                        </h4>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-2"></div>
+        <div class="col-sm-1"></div>
     </div>
     <div class="container">
         <div class="row" style="width: 100%;">
             <div class="col-sm-12 space">
                 <h3>Questions / Comments: </h3>
                 <div class="form-group">
-                    <input ngModel  #name="ngModel" name="Name" class="form-control" placeholder="Name"/>
+                    <input ngModel #name="ngModel" name="Name" class="form-control" placeholder="Name" />
                 </div>
                 <div class="form-group">
-                    <input ngModel #phone="ngModel" class="form-control" placeholder="Phone"/>
-              </div>
-              <div class="form-group">
-                <input ngModel #email="ngModel" type="email" class="form-control" placeholder="Email"/>
-          </div>
+                    <input ngModel #phone="ngModel" class="form-control" placeholder="Phone" />
+                </div>
                 <div class="form-group">
-                <textarea ngModel #message="ngModel" class="form-control" placeholder="Enter your message here"></textarea>
-            </div>
+                    <input ngModel #email="ngModel" type="email" class="form-control" placeholder="Email" />
+                </div>
+                <div class="form-group">
+                    <textarea ngModel #message="ngModel" class="form-control" placeholder="Enter your message here"></textarea>
+                </div>
                 <button (click)="commentProduct(message.value,phone.value,name.value,email.value)" class="btn btn-success">Post</button>
             </div>
-            <ng-container *ngFor="let notification of notifications" >
+            <ng-container *ngFor="let notification of notifications">
                 <div class="col-sm-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -84,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-            </ng-container>  
+            </ng-container>
         </div>
     </div>
 </div>
